[gd_scene load_steps=2 format=3 uid="uid://server_info_ui"]

[ext_resource type="Script" path="res://host/scripts/server_info_ui.gd" id="1_server_info"]

[node name="ServerInfoUI" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = -20.0
script = ExtResource("1_server_info")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "服务器信息"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="IPLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "IP地址: 获取中..."

[node name="PortLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "端口: 7000"

[node name="PlayersLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "玩家数: 0/4"

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "状态: 运行中"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "请将IP地址告诉其他玩家"
horizontal_alignment = 1
